# pingpong_collector

./: README.md
code_raspi/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  pyproject.toml
code_raspi/.git_bk/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
code_raspi/.git_bk/logs/: HEAD
code_raspi/.git_bk/objects/pack/: pack-6a69ce1489754d7dc8ddb99ebff4d9b3caa7b19a.idx  pack-6a69ce1489754d7dc8ddb99ebff4d9b3caa7b19a.pack
code_raspi/calib/: README.md  camera_calibration.py  dist_pickle.p  img_collect.py
code_raspi/inc/: algorithms.hpp  camera.hpp  classes.hpp  controller.hpp  detector.hpp  nucleo.hpp  serial.hpp  settings.hpp
code_raspi/src/: CMakeLists.txt  algorithms.cpp  camera.cpp  classes.cpp  controller.cpp  detector.cpp  main.cpp  nucleo.cpp
code_raspi/tests/: ball_tracking.py  opencv_camera_test.py
code_raspi/tests/test-cpp/: CMakeLists.txt  test_opencv.cpp
mcu-interface/: .gitignore  CMakeLists.txt  Makefile  README.md  mcu-interface.ioc  platformio.ini  stm32pio.ini
mcu-interface/.git_bk/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
mcu-interface/.git_bk/logs/: HEAD
mcu-interface/.git_bk/logs/refs/: stash
mcu-interface/.git_bk/objects/pack/: pack-a86a4a9507b0269d5d2334b32adb2eba55a2b33b.idx
mcu-interface/.git_bk/refs/: stash
mcu-interface/Inc/: CriticalSection.hpp  IOStream.h  LCD.h  MotorShield.h  N64Controller.h  OneWire.h  SerialProtocol.hpp  Servo.h
mcu-interface/Src/: LCD.cpp  MotorShield.cpp  N64Controller.cpp  OneWire.cpp  Servo.cpp  gpio.c  main.cpp  stm32f4xx_it.c  tim.c
(+34 files in other folders)
